--- a/frontend_react/src/css/myStyle.css
+++ b/frontend_react/src/css/myStyle.css
@@ -188,3 +188,18 @@ h1 {
     background-color: rgba(219, 219, 219, 0.151);;;
     border-radius: 5%;
 }
+
+.text-link {
+    color: inherit;
+    text-decoration: inherit;
+    display: table-row;
+    display: table-footer-group;
+}
+
+.text-link:hover {
+    color: white;
+}
+
+.cardBody {
+    background-color: grey;
+}
