--- a/frontend_react/src/css/myStyle.css
+++ b/frontend_react/src/css/myStyle.css
@@ -212,3 +212,92 @@ h1 {
 .FloatingText {
     color: black;
 }
+
+.profilBody {
+    height: 100vh;
+    background: url("/src/images/diamond.jpg") no-repeat center;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    padding-top: 50px;
+}
+
+.profileCard {
+    width: 300px;
+    text-align: center;
+    border-radius: 8px;
+    overflow: hidden;
+}
+
+.cardHeader {
+    background-color:rgba(80, 80, 80, 0.918);
+    padding: 60px 40px;
+}
+
+.avatar{
+    display: inline-block;
+    padding: 8px;
+    background: linear-gradient(130deg, black,white);
+    margin: auto;
+    border-radius: 50%;
+    animation: animated-gradient 2s linear infinite;
+    background-size: 200% 200%;
+}
+
+.avatar img {
+    display: block;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+}
+
+@keyframes animated-gradient {
+    25% {
+        background-position: left bottom;
+    }
+    50% {
+        background-position: right bottom;
+    }
+    75% {
+        background-position: right top;
+    }
+    100% {
+        background-position: left top;
+    }
+}
+
+.deleteBtn {
+    display: inline-block;
+    padding:12px 50px;
+    color: red;
+    border: 2px solid red;
+    border-radius: 6px;
+    margin-top: 16px;
+    transition: .3s linear;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.deleteBtn:hover {
+    background: red;
+    color: white;
+}
+
+.upgradeBtn {
+    display: inline-block;
+    padding:12px 50px;
+    color: rgb(218, 149, 0);
+    border: 2px solid rgb(218, 149, 0);
+    border-radius: 6px;
+    margin-top: 16px;
+    transition: .3s linear;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.upgradeBtn:hover {
+    background: rgb(218, 149, 0);
+    color: white;
+}
+
+
