--- a/frontend_react/src/css/myStyle.css
+++ b/frontend_react/src/css/myStyle.css
@@ -300,4 +300,50 @@ h1 {
     color: white;
 }
 
+.chatContainer {
+    height: 75vh;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 2px 2px 20px rgba(255, 255, 255, 0.5);
+}
+
+.chatHeader{
+    color: white;
+    padding: 15px;
+    font-size: 30px;
+    background-color: grey;
+}
+
+.chatBody {
+    flex: 1;
+    padding: 20px 30px;
+}
+
+.message {
+    background-color: rgb(47, 151, 255);
+    padding: 10px;
+    width: fit-content;
+    border-radius: 10px;
+    margin-bottom: 15px;
+}
+
+.myMassage {
+    margin-left: auto;
+    background-color: white;
+    color: black;
+}
+
+.chatFooter {
+    margin: 10px;
+}
+
+.chatFooter input {
+    flex: 1;
+    height: 40px;
+    border-radius: 10px;
+    border: none;
+    outline: none;
+    padding-left: 5px;
+    font-size: 14px;
+}
 
